# inv4Biz

./: db.sqlite3  pyproject.toml  usefull cmd
dashboard/: admin.py  forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_invoice_ponumber.py  0003_auto_20210717_1133.py  0004_rename_quantity_deposit_amount.py  0005_auto_20210717_1211.py  0006_alter_invoicedeposit_amount.py  0007_invoice_balance.py  0008_customer_funds.py  0009_alter_invoiceproduct_duequantity.py  0010_invoicedeposit_type.py  0011_invoice_type.py  0012_auto_20210730_2218.py  0013_test.py
inventoryproject/: settings.py
templates/Tests/: dynamicAddRemoveRow1.html
templates/dashboard/: category.html  category_delete.html  category_edit.html  customers.html  customers_delete.html  customers_edit.html  index.html  invoice.html  invoice_delete.html  invoice_delivery.html  invoice_deposit.html  invoice_edit_product.html  invoice_printed.html  invoice_sales-order.html  products.html  products_delete.html  products_edit.html  proforma.html  proforma_delete.html  proforma_edit_product.html  proforma_printed.html
templates/dashboard/backup/: invoice_edit.html
templates/partials/: base.html  nav.html  topside backup  topside.html
user/migrations/: 0001_initial.py
